@@ -4,6 +4,8 @@
   - Replaced all uses of AUTOLOAD with a much faster alternative, so helpers are
     faster by up to 400% and stack traces contain more information. (mst)
   - Removed experimental status from server method in Mojolicious.
+  - Improved performance of helpers method in Mojolicious::Controller by up to
+    90%.
 
 8.03  2018-10-16
   - Added support for weak reference accessors to Mojo::Base. (mst)
